Update fmt.Println output to 'Goodbye World'

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
   <a class="skip-link" href="#main">Skip to content</a>
   <header>
     <div class="container nav" role="navigation" aria-label="Primary">
-      <div class="brand"><div class="logo" aria-hidden="true"><img src="/c:/JANICE/CEEL/random-icons-png-favpng-48dZQ9PzjZA9quEmMKtG90Rwn.jpg" alt=""></div><div>Janice D.</div></div>
+      <div class="brand"><div class="logo" aria-hidden="true"><img src="random-icons-png-favpng-48dZQ9PzjZA9quEmMKtG90Rwn.jpg" alt=""></div><div>Janice D.</div></div>
       <nav>
         <ul id="primary-nav">
           <li><a href="#home" aria-current="page">Home</a></li>
@@ -120,7 +120,7 @@
         <div class="grid" style="margin-top:20px;">
           <div class="card reveal" style="grid-column: span 5;">
             <div class="media hero-media" role="img" aria-label="Portrait or design sample">
-              <img src="/c:/JANICE/CEEL/b1749f0d-44f8-48d6-bf84-d76e7c0fa43d.jpg" alt="Hero side image">
+              <img src="b1749f0d-44f8-48d6-bf84-d76e7c0fa43d.jpg" alt="Hero side image">
             </div>
           </div>
           <div class="card reveal" style="grid-column: span 7;">
@@ -147,7 +147,7 @@
         <div class="grid">
           <div class="card reveal" style="grid-column: span 5;">
             <div class="media square">
-              <img src="/c:/JANICE/CEEL/291bf227-918f-491a-8978-9111c813f119.jpg" alt="Profile photo">
+              <img src="291bf227-918f-491a-8978-9111c813f119.jpg" alt="Profile photo">
             </div>
           </div>
           <div class="card reveal" style="grid-column: span 7;">
@@ -166,23 +166,23 @@
         <h2 id="projects-title">Projects</h2>
         <div class="projects-grid">
           <div class="project-card reveal" style="grid-column: span 4;">
-            <div class="project-thumb"><img src="/c:/JANICE/CEEL/64d400a8-a78a-4c3f-bae2-25c5ad165488.jpg" alt="Project One"></div>
+            <div class="project-thumb"><img src="64d400a8-a78a-4c3f-bae2-25c5ad165488.jpg" alt="Project One"></div>
             <div class="project-content"><h3>Project One</h3><div class="muted">Social Media Post</div></div>
           </div>
           <div class="project-card reveal" style="grid-column: span 4;">
-            <div class="project-thumb"><img src="/c:/JANICE/CEEL/977e79db-b4b4-49f0-97c1-b924608b1234.jpg" alt="Project Two"></div>
+            <div class="project-thumb"><img src="977e79db-b4b4-49f0-97c1-b924608b1234.jpg" alt="Project Two"></div>
             <div class="project-content"><h3>Project Two</h3><div class="muted">Landing Page</div></div>
           </div>
           <div class="project-card reveal" style="grid-column: span 4;">
-            <div class="project-thumb"><img src="/c:/JANICE/CEEL/39601a1a-1fa2-439d-a403-8b98a7ba8550.jpg" alt="Project Three"></div>
+            <div class="project-thumb"><img src="39601a1a-1fa2-439d-a403-8b98a7ba8550.jpg" alt="Project Three"></div>
             <div class="project-content"><h3>Project Three</h3><div class="muted">Newsletter Header</div></div>
           </div>
           <div class="project-card reveal" style="grid-column: span 4;">
-            <div class="project-thumb"><img src="/c:/JANICE/CEEL/b1749f0d-44f8-48d6-bf84-d76e7c0fa43d.jpg" alt="Project Four" style="filter: brightness(1.12) contrast(1.05);"></div>
+            <div class="project-thumb"><img src="b1749f0d-44f8-48d6-bf84-d76e7c0fa43d.jpg" alt="Project Four" style="filter: brightness(1.12) contrast(1.05);"></div>
             <div class="project-content"><h3>Project Four</h3><div class="muted">Banner Ad • Logo</div></div>
           </div>
           <div class="project-card reveal" style="grid-column: span 4;">
-            <div class="project-thumb"><img src="/c:/JANICE/CEEL/f1a26c28-4156-4d0a-ae3d-2d441d0dec6b.jpg" alt="Project Five"></div>
+            <div class="project-thumb"><img src="f1a26c28-4156-4d0a-ae3d-2d441d0dec6b.jpg" alt="Project Five"></div>
             <div class="project-content"><h3>Project Five</h3><div class="muted">Short subtitle</div></div>
           </div>
         </div>
@@ -343,15 +343,8 @@
     
   </script>
   <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Person",
-    "name": "Her Name",
-    "jobTitle": "Graphic Designer",
-    "gender": "Female",
-    "url": "https://example.com/",
-    "sameAs": ["https://instagram.com/"]
-  }
+
   </script>
 </body>
 </html>
+
